--- a/game/app-play.html
+++ b/game/app-play.html
@@ -321,29 +321,38 @@
       }
     </script>
 
-    <!-- Fix PWA back-forward cache + viewport shift on iPhone standalone return -->
-    <script>
-      window.addEventListener('pageshow', function (event) {
-        if (event.persisted) {  // Page was restored from bfcache (common on back button in PWA)
-          // Force full re-layout and resize
-          document.body.style.display = 'none';
-          document.body.offsetHeight; // force reflow
-          document.body.style.display = '';
+<!-- Fix PWA back-forward cache + viewport shift on iPhone standalone return -->
+<script>
+  window.addEventListener('pageshow', function(event) {
+    if (event.persisted) {  // Restored from bfcache (back button in PWA)
+      // Soft reflow + repaint
+      requestAnimationFrame(() => {
+        // Re-apply canvas size safely
+        const canvas = document.querySelector('#unity-canvas');
+        if (canvas) {
+          canvas.style.width = '100vw';
+          canvas.style.height = '100dvh';
+        }
 
-          // Re-apply canvas size
-          const canvas = document.querySelector('#unity-canvas');
-          if (canvas) {
-            canvas.style.width = '100vw';
-            canvas.style.height = '100dvh';
-          }
+        // Double resize dispatch for Unity & viewport sync
+        window.dispatchEvent(new Event('resize'));
+        setTimeout(() => window.dispatchEvent(new Event('resize')), 100);
 
-          // Re-dispatch resize event (helps Unity & viewport recalculate safe areas)
-          window.dispatchEvent(new Event('resize'));
-          setTimeout(() => window.dispatchEvent(new Event('resize')), 100); // double-tap for reliability
+        // Extra iOS nudge: force safe-area recalc
+        if ('visualViewport' in window) {
+          window.visualViewport.offsetTop; // trigger read
         }
       });
-    </script>
+    }
+  });
 
+  // Bonus: Listen to visualViewport changes (address bar/notch shifts)
+  if ('visualViewport' in window) {
+    window.visualViewport.addEventListener('resize', () => {
+      window.dispatchEvent(new Event('resize'));
+    });
+  }
+</script>
     <!-- Link to non-critical JavaScript files -->
     <script src="../assets/js/jquery.scrollex.min.js"></script>
     <script src="../assets/js/jquery.scrolly.min.js"></script>
