Updated poster image and video on blinko.html. Updated Blink logo path to app-plat.html from blinko.html and play.html.

--- a/game/blinko.html
+++ b/game/blinko.html
@@ -98,7 +98,7 @@
 
 		<!-- Header Subpage-->
 		<header class="header-subpage">
-			<a href="../index.html">
+			<a href="/game/app-play.html">
 				<img src="../assets/images/giddys-blinko-logo-trans.png" alt="Giddy's Blinko Logo" class="logo">
 			</a>
 		</header>
@@ -370,11 +370,11 @@
 				<!-- Video container with poster overlay -->
 				<div class="video-main video-hosted-portrait">
 					<video id="myVideo" controls playsinline preload="metadata">
-						<source src="../assets/videos/giddys-blinko-trailer.MP4" type="video/mp4">
+						<source src="../assets/videos/giddys-blinko-trailer.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video>
 					<!-- Poster overlay (visible before play and after video ends) -->
-					<img class="video-poster-overlay" src="../assets/images/ofid-poster.PNG"
+					<img class="video-poster-overlay" src="../assets/images/giddys-blinko-poster.jpg"
 						alt="Kinnected video thumbnail">
 				</div>
 
