--- a/game/play.html
+++ b/game/play.html
@@ -287,7 +287,7 @@
 
         <!-- Header Subpage-->
         <header class="header-subpage">
-            <a href="../index.html">
+			<a href="/game/app-play.html">
                 <img src="../assets/images/giddys-blinko-logo-trans.png" alt="Giddy's Blinko Logo" class="logo">
             </a>
         </header>
