Minor trext and link adjustments to blinko.html. Fix video path.

--- a/game/blinko.html
+++ b/game/blinko.html
@@ -363,14 +363,14 @@
 					<h2 id="blinko-trailer" class="align-center">Trailer: Giddy's Retro Arcade</h2>
 
 					<!-- Section Description -->
-					<p class="align-center">Take a look at our early trailer showcasing our Giddy's Blinko Retro gaming
+					<p class="align-center">Take a look at our launch trailer showcasing the Giddy's Blinko Retro gaming
 						experience!</p>
 				</header>
 
 				<!-- Video container with poster overlay -->
 				<div class="video-main video-hosted-portrait">
 					<video id="myVideo" controls playsinline preload="metadata">
-						<source src="../assets/videos/giddys-blinko-trailer.mp4" type="video/mp4">
+						<source src="../assets/videos/giddys-blinko-trailer.MP4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video>
 					<!-- Poster overlay (visible before play and after video ends) -->
@@ -442,9 +442,8 @@
 							-->
 
 			<footer>
-				<p class="align-center">Giddy's Blinko — Coming Soon <br />
-					<a href="https://x.com/GiddysBlinko" target="_blank">Join for
-						Updates</a>
+				<p class="align-center">Giddy's Blinko — Live Now! <br />
+					<a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fcodeshack.io%2F&ref_src=twsrc%5Etfw%7Ctwcamp%5Ebuttonembed%7Ctwterm%5Efollow%7Ctwgr%5EGiddysBlinko&region=follow_link&screen_name=GiddysBlinko" target="_blank">Follow on 𝕏</a>
 				</p>
 			</footer>
 
