Change Kinnected.html form title to Join Early Access for onboarding promo.

--- a/pages/kinnected.html
+++ b/pages/kinnected.html
@@ -420,7 +420,7 @@
 		<footer id="footer">
 			<section>
 				<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
-					<h2 class="centered-heading">Got Questions?</h2>
+					<h2 class="centered-heading">Join Early Access</h2>
 					<div class="fields">
 						<div class="field">
 							<label for="name">Name</label>
