Added Privacy Policy to main.html and created privacy-policy.html. Fixeed wrong webform text on app-featured-phantom.html.

--- a/explore/app-featured-phantom.html
+++ b/explore/app-featured-phantom.html
@@ -447,10 +447,10 @@
 		<footer id="footer">
 			<section>
 				<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
-					<h2 class="centered-heading">Redeem Rewards</h2>
+					<h2 class="centered-heading">Contact Us</h2>
 					<div class="fields">
 						<div class="field">
-							<label for="name">Hvr Username</label>
+							<label for="name">Name</label>
 							<input type="text" name="name" id="name" required>
 						</div>
 						<div class="field">
@@ -458,7 +458,7 @@
 							<input type="email" name="email" id="email" required>
 						</div>
 						<div class="field">
-							<label for="message">Public SOL Address</label>
+							<label for="message">Message</label>
 							<textarea name="message" id="message" rows="3" required></textarea>
 						</div>
 					</div>
